changes in adress

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="overflow-x: hidden;">
 
 <head>
   <meta charset="utf-8">
@@ -42,9 +42,9 @@
 
   <!-- banner  -->
   <section>
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
       <div class="row">
-        <div class="col-lg-12 px-0">
+        <div class="col-lg-12 px-0 ">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -93,7 +93,8 @@
             <h1 class="text-white text-w">Trade Equity Online</h1>
             <p class="text-white text-w">Equity investments are an excellent instrument to create wealth over the long
               term. When you invest in equity, you invest in the future growth of the business. Indian equity markets
-              are well-developed with an adequate regulatory system in place.</p>
+              are well-developed with an adequate regulatory
+              system in place.</p>
           </div>
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center  d-md-block d-none">
@@ -110,8 +111,8 @@
               ample flexibility and adequate risk management.</p>
           </div>
         </div>
-        <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center  d-md-none d-block mt-5">
-          <img src="./assets/imgs/crypto-trading-4122515-3411209.webp" class="img-fluid " alt="">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center rounded  d-md-none d-block mt-5">
+          <img src="./assets/imgs/coin.jpeg" class="img-fluid " alt="">
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 my-auto ">
           <div class="text-center mt-5">
@@ -121,8 +122,8 @@
               margin and provide ample liquidity.</p>
           </div>
         </div>
-        <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center d-md-block d-none ">
-          <img src="./assets/imgs/crypto-trading-4122515-3411209.webp" class="img-fluid " alt="">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center rounded d-md-block d-none ">
+          <img src="./assets/imgs/coin.jpeg" class="img-fluid " alt="">
         </div>
 
       </div>
@@ -134,7 +135,7 @@
         bg-gif">
       <div class="row">
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center mt-5">
-          <img src="./assets/imgs/initial-dex-offering-4658205-3900718.webp" class="img-fluid " alt="">
+          <img src="./assets/imgs/ipo.jpeg" class="img-fluid rounded" alt="">
 
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 my-auto ">
@@ -142,7 +143,8 @@
             <h1 class="text-white text-w">IPO - Initial Public Offering</h1>
             <p class="text-white text-w">An Initial Public Offering is an opportunity for investors to take part in the
               growth of a company. It is always better to be in the first batch of investors. The shares offered by the
-              company get listed on the stock exchanges and can be bought and sold by investors.</p>
+              company get listed on the stock exchanges
+              and can be bought and sold by investors.</p>
           </div>
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center  d-md-none d-block mt-5">
@@ -153,7 +155,8 @@
             <h1 class="text-white text-w">Investing in the stock market shouldn't be like a puzzle.</h1>
             <p class="text-white text-w">Choose Smartfolios, our hassle free, data driven platform where equity
               investments meet intelligence. Smartfolios offer you baskets of stocks curated by experts to help you to
-              invest based on your investment appetite and outlook to achieve your financial goals.</p>
+              invest based on your investment appetite and outlook
+              to achieve your financial goals.</p>
           </div>
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center d-md-block d-none">
@@ -167,8 +170,8 @@
             <h1 class="text-white text-w mt-5">Trade in Commodities</h1>
             <p class="text-white text-w">Commodity trading facilitates the buying and selling of various commodities.
               The most commonly traded items are precious metal, base metal, energy and agro-based commodities. These
-              commodities can be bought and sold, just like you trade in equity/shares through the commodity exchanges.
-            </p>
+              commodities can be bought and sold, just like
+              you trade in equity/shares through the commodity exchanges.</p>
           </div>
         </div>
 
@@ -181,19 +184,20 @@
         bg-gif">
       <div class="row">
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center  d-md-none d-block">
-          <img src="./assets/imgs/bitcoin-dominance-5470088-4562583.webp" class="img-fluid mt-5" alt="">
+          <img src="./assets/imgs/sov.jpeg" class="img-fluid mt-5 rounded" alt="">
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 my-auto">
           <div class="text-center">
             <h1 class="text-white text-w mt-5">Sovereign Gold Bond Scheme</h1>
             <p class="text-white text-w">Want to invest in gold, but are concerned about the safekeeping and purity of
               the yellow metal? Invest in government-backed Sovereign Gold Bonds and enjoy the benefits of physical gold
-              without any hassles. SGBs are issued by the Reserve Bank of India on behalf of the Government of India.
-              Additionally, no TDS is levied on the interest income of SGBs.</p>
+              without any hassles. SGBs are issued by the
+              Reserve Bank of India on behalf of the Government of India. Additionally, no TDS is levied on the interest
+              income of SGBs.</p>
           </div>
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center d-md-block d-none">
-          <img src="./assets/imgs/bitcoin-dominance-5470088-4562583.webp" class="img-fluid " alt="">
+          <img src="./assets/imgs/sov.jpeg" class="img-fluid rounded" alt="">
         </div>
         <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center mt-5">
           <img src="./assets/imgs/life-insurance-landing-img.png" class="img-fluid " alt="">
@@ -203,40 +207,54 @@
             <h1 class="text-white text-w">Best Insurance Plans</h1>
             <p class="text-white text-w">Emergencies don’t come with a warning. It is prudent to take sufficient
               insurance cover. Insurance protects you, your family, your business and your investments against financial
-              loss. And having an adequate insurance cover is the first step in financial planning.</p>
+              loss. And having an adequate insurance cover is
+              the first step in financial planning.</p>
           </div>
         </div>
         <!-- <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center mt-5 d-md-none d-block">
-                <img src="./assets/imgs/bitcoin-dominance-5470088-4562583.webp" class="img-fluid " alt="">
-            </div>
-             <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 my-auto">
-                <div class="text-center my-5 pb-5">
-                 <h1 class="text-white text-w">Depository services</h1>
-                 <p  class="text-white text-w">With an increase in the number of investors, the need for safe-keeping of financial assets became of paramount importance. Depositories are like banks for shares, debentures, bonds and units. Geojit is a depository participant that acts as a bridge between common investors like you and the depositories.</p>
+                    <img src="./assets/imgs/euro-bank-locker-4891528-4080972.webp" class="img-fluid " alt="">
                 </div>
-             </div> -->
-        <!-- <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center  d-md-block d-none">
-                <img src="./assets/imgs/euro-bank-locker-4891528-4080972.webp" class="img-fluid " alt="">
-            </div> -->
+                <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 my-auto">
+                    <div class="text-center my-5 pb-5">
+                        <h1 class="text-white text-w">Depository services</h1>
+                        <p class="text-white text-w">With an increase in the number of investors, the need for safe-keeping of financial assets became of paramount importance. Depositories are like banks for shares, debentures, bonds and units. Geojit is a depository participant
+                            that acts as a bridge between common investors like you and the depositories.</p>
+                    </div>
+                </div>
+                <div data-aos="zoom-in" data-aos-duration="1000" class="col-lg-6 text-center  d-md-block d-none">
+                    <img src="./assets/imgs/euro-bank-locker-4891528-4080972.webp" class="img-fluid " alt="">
+                </div> -->
       </div>
     </div>
   </section>
-  <nav class="navbar bg-dark">
+  <section>
+    <div class="container-fluid
+        
+    bg-gif">
+      <div class="row">
+        <div class="col-lg-12 text-center text-light mb-5">
+          <h1 class="my-5">Our Partners</h1>
+          <img src="./assets/imgs/Untitled design.png" class="img-fluid rounded" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <nav class="navbar bg-dark ">
     <div class="container-fluid">
       <span class="navbar-text text-white text-w">
         © Copyright GCG consultant. All Rights Reserved
-        <br>
-        <span class="text-white">
-          address <br>
-          34, 1st Floor, <br>
-          MSP Hotel Building Opposite Apollo Hospital, <br>
-          80 feet Road, KK Nagar <br>
-          Madurai - 6250202 <br>
-        </span>
-
-        <span class="navbar-text text-white text-w">
-          Designed by <a class="text-white" href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a>
-        </span>
+        <address>
+          <address>
+            34, 1st Floor, <br>
+            MSP Hotel Building Opposite Apollo Hospital, <br>
+            80 feet Road, <br>
+            KK Nagar Madurai - 6250202
+          </address>
+        </address>
+      </span>
+      <span class="navbar-text text-white text-w">
+        Designed by <a class="text-white" href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a>
+      </span>
     </div>
   </nav>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
