changes in adress

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>gcg consultant</title>
+  <title>gcg </title>
   <link rel="shortcut icon" href="./assets/imgs/032fcfb5-a721-45f0-b508-5359f50f8af8-removebg-preview (2).png"
     type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg bg-dark ">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="#"><img
-          src="./assets/imgs/032fcfb5-a721-45f0-b508-5359f50f8af8-removebg-preview (2).png" height="60px" alt=""></a>
+          src="./assets/imgs/logo3-svg.svg" height="100px" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -56,13 +56,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./assets/imgs/c28aaa33-91e4-4cfb-9763-eb34b3256dfd.jpg" class="d-block img-fluid " alt="...">
+                <img src="./assets/imgs/banner/mutual funds.png" class="d-block img-fluid " alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/imgs/2.jpg" class="d-block img-fluid " alt="...">
+                <img src="./assets/imgs/banner/investing in.png" class="d-block img-fluid " alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/imgs/3.jpg" class="d-block img-fluid " alt="...">
+                <img src="./assets/imgs/banner/stock image.png" class="d-block img-fluid " alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
