changes in adress

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-expand-lg bg-dark ">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="#"><img
-          src="./assets/imgs/logo3-svg.svg" height="100px" alt=""></a>
+          src="./assets/imgs/banner/logo2 png.png" height="100px" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -242,16 +242,17 @@
   <nav class="navbar bg-dark ">
     <div class="container-fluid">
       <span class="navbar-text text-white text-w">
-        © Copyright GCG consultant. All Rights Reserved
+        © Copyright GCG Wealth Management. All Rights Reserved
         <address>
           <address>
             34, 1st Floor, <br>
-            MSP Hotel Building Opposite Apollo Hospital, <br>
+            MSP Hotel Building ( opposite Apollo hospital ), <br>
             80 feet Road, <br>
-            KK Nagar Madurai - 6250202
+            KK Nagar Madurai - 625020
           </address>
         </address>
       </span>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3930.067814984405!2d78.14567187503023!3d9.928310390173445!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOcKwNTUnNDEuOSJOIDc4wrAwOCc1My43IkU!5e0!3m2!1sen!2sin!4v1720535779866!5m2!1sen!2sin" width="600" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <span class="navbar-text text-white text-w">
         Designed by <a class="text-white" href="https://softwaredevelopmentandgraphicdesign.tech/">SDGD</a>
       </span>
