--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>gcg </title>
-  <link rel="shortcut icon" href="./assets/imgs/032fcfb5-a721-45f0-b508-5359f50f8af8-removebg-preview (2).png"
+  <link rel="shortcut icon" href="./assets/imgs/banner/logo2 png.png"
     type="image/x-icon">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -62,7 +62,7 @@
                 <img src="./assets/imgs/banner/mutual funds.png" class="d-block img-fluid " alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./assets/imgs/banner/investing in.png" class="d-block img-fluid " alt="...">
+                <img src="./assets/imgs/banner/Official Partner.png" class="d-block img-fluid " alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
